# az_analyze_image

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml  test.yml  test_with_key.yml
az_analyze_image/: Cargo.toml  README.md
az_analyze_image/src/: lib.rs
az_analyze_image/src/common/: mod.rs  secret.rs
az_analyze_image/src/v32/: api.rs  client.rs  mod.rs
az_analyze_image/src/v40/: api.rs  client.rs  mod.rs
az_analyze_image/tests/: integration_test.rs
az_analyze_image/tests/images/: README.md
az_analyze_image/tests/samples/v32/: adult.json  all_features.json  brands.json  categories_1.json  categories_2.json  categories_3.json  color.json  description.json  faces.json  image_type.json  no_query_parameters.json  objects.json  tags.json
az_analyze_image/tests/samples/v40/: all_features.json  captions.json  dense_captions.json  objects.json  people.json  read.json  smart_crops.json  tags.json
az_analyze_image/tests/util/: mod.rs
az_analyze_image/tests/v32/: error.rs  mod.rs  test.rs
az_analyze_image/tests/v40/: error.rs  mod.rs  test.rs
examples/detect_faces/: Cargo.toml  README.md
examples/detect_faces/src/: main.rs
examples/detect_people/: Cargo.toml  README.md
examples/detect_people/src/: main.rs
