[package]
authors = ["Owain Davies"]
categories = ["api-bindings", "computer-vision"]
description = "Client library for Azure AI Services Analyze Image (Image Analysis) APIs"
edition = "2021"
keywords = [
    "analyze-image",
    "api-client",
    "azure",
    "computer-vision",
    "image-analysis",
]
license = "Apache-2.0 OR MIT"
name = "az_analyze_image"
readme = "README.md"
repository = "https://github.com/OTheDev/az_analyze_image"
version = "0.1.1"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
subtle = "2.6.1"
thiserror = "1.0.66"
zeroize = "1.8.1"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }

# For README example
image = "0.25.5"
imageproc = "0.25.0"
